--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -334,7 +334,8 @@
    "execution_count": 3,
    "id": "62782359",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -448,7 +449,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "2c1b84a4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -789,9 +792,7 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "e828b7f2",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -981,6 +982,14 @@
     "        \n",
     "myFunction(cat_target, cat_count, numerics)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dfee008-cdcf-431a-8a9c-57362ba7e7da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
