--- a/03-Data-Preprocessing.ipynb
+++ b/03-Data-Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "61254ce9-7cec-4a1e-bf9b-49dd413370b9",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "fa3f2bc2-4f66-4554-92e6-27a0b7a0a86e",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4  unknown    5   may         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "eb1caf9c-45fc-411a-84c3-c28369186cb1",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3311b0ad-f281-4c09-9900-f8fbc7f872df",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "array(['no', 'no', 'no', ..., 'yes', 'no', 'no'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8df01b54-3081-44d1-832e-0e4df59bf957",
    "metadata": {},
    "outputs": [],
@@ -287,14 +287,14 @@
     ")\n",
     "\n",
     "X = np.array(ct.fit_transform(X))\n",
-    "\n",
-    "# pd.DataFrame(X).to_csv('data/x_encoded.csv')\n",
+    "X\n",
+    "pd.DataFrame(X).to_csv('data/x_encoded.csv')\n",
     "# os.system('open x_oh_encoded.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "e5235abb-fc68-4a5c-9d70-0dff6a3da3c3",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "array([0, 0, 0, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,19 +319,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6bca891f-2a55-4c22-932d-280d6e38070d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f28ab7b3-470a-437c-97c9-985457a8fb11",
+   "execution_count": 16,
+   "id": "c4a38a29-6542-4aba-897a-16d94d173fc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0, 0.0, 0.0, ..., -0.24745481214336104, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., -0.5662418342484753, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [0.0, 1.0, 0.0, ..., -0.5662418342484753, 2.2114757997075096,\n",
+       "        1.0119321842765145],\n",
+       "       ...,\n",
+       "       [1.0, 0.0, 0.0, ..., 1.027693276277096, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., 2.6216283868026675, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [0.0, 1.0, 0.0, ..., -0.24745481214336104, 2.9619092274075913,\n",
+       "        0.593780491188519]], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "X_train[:, -7:] = sc.fit_transform(X_train[:, -7:])\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "52e0ebaf-36da-437c-8b15-4c17c215170f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, ..., 0.3901192320668675, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., -0.24745481214336104, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., 0.3901192320668675, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       ...,\n",
+       "       [1.0, 0.0, 0.0, ..., 1.027693276277096, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., 3.5779894531180103, -0.4100383077247772,\n",
+       "        -0.2425228949874718],\n",
+       "       [1.0, 0.0, 0.0, ..., 0.3901192320668675, -0.4100383077247772,\n",
+       "        -0.2425228949874718]], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test[:, -7:] = sc.transform(X_test[:, -7:])\n",
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "17d4f090-70db-4a34-8f15-3789bed3a350",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.DataFrame(X_train).to_csv('data/train/x_train.csv', index=False)\n",
+    "pd.DataFrame(X_test).to_csv('data/test/x_test.csv', index=False)\n",
+    "\n",
+    "pd.DataFrame(y_train).to_csv('data/train/y_train.csv', index=False)\n",
+    "pd.DataFrame(y_test).to_csv('data/test/y_test.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
