--- a/v1/Data-Preprocessing.ipynb
+++ b/v1/Data-Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "41e9678b-3129-44c2-bcb7-91075edc6914",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "root = '/Users/metinalisho/Documents/GitHub/Bank-Marketing-Classification/'"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "0ab65a78-4d4a-4d4d-ae3b-39575f872956",
    "metadata": {},
    "outputs": [
@@ -127,13 +125,13 @@
        "4   33       unknown   single    unknown      no        1      no   no  no"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(root + 'data/customers.csv', sep=';')\n",
+    "df = pd.read_csv('data/customers.csv', sep=';')\n",
     "df = df.drop(columns=['duration', 'day', 'month', 'campaign', 'pdays', 'previous', 'poutcome', 'contact'])\n",
     "df.head()"
    ]
@@ -148,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "748983f2-8ebe-45b2-b347-7e11baa4895d",
    "metadata": {},
    "outputs": [
@@ -165,7 +163,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4905b2bc-336e-4b1e-b994-2e54632713e3",
    "metadata": {},
    "outputs": [
@@ -187,7 +185,7 @@
        "array(['no', 'no', 'no', ..., 'yes', 'no', 'no'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d94fce6a-96a7-4f40-afd7-9bcc9c71ffcb",
    "metadata": {},
    "outputs": [
@@ -241,7 +239,7 @@
        "       [0.0, 0.0, 1.0, ..., 0.0, 37, 2971]], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,13 +261,13 @@
     ")\n",
     "\n",
     "X = np.array(ct.fit_transform(X))\n",
-    "pd.DataFrame(X).to_csv(root + 'data/data-preprocessing/X_encoded_01.csv')\n",
+    "pd.DataFrame(X).to_csv('data/X_encoded_01.csv')\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "1971aa7e-be80-4fa8-bbe6-b8b15a91854f",
    "metadata": {},
    "outputs": [
@@ -279,7 +277,7 @@
        "array([0, 0, 0, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "52aa8bde-e7a9-4cfe-9faa-22e4b5b2728f",
    "metadata": {},
    "outputs": [],
@@ -314,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "8deae66b-2cab-49e4-a9ba-cb05c5ab3f81",
    "metadata": {},
    "outputs": [
@@ -400,7 +398,7 @@
        "max       95.0  102127.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "34664067-a86b-4382-851f-7276d3eeb6c8",
    "metadata": {},
    "outputs": [
@@ -447,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "d3c0a871-c225-4d3c-af3c-3c6f0ab2ea9e",
    "metadata": {},
    "outputs": [
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "e1e222fe-f612-4a97-9cab-e547e3047132",
    "metadata": {},
    "outputs": [
@@ -518,7 +516,7 @@
        "        -0.3294291851229337]], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "3dec5cee-321e-4aa1-9baa-d90347f17a31",
    "metadata": {},
    "outputs": [
@@ -554,7 +552,7 @@
        "        0.002154009050447482]], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "19d05b3e-e089-410d-a255-875fbba8515d",
    "metadata": {},
    "outputs": [],
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "7f91d1ca-6dcc-474f-a26c-3917ad13f73b",
    "metadata": {},
    "outputs": [
@@ -613,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "bee9b1d5-918c-4316-bcdc-2254f9c9c0f1",
    "metadata": {},
    "outputs": [
@@ -657,16 +655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "36aef634-be45-4c03-9c42-e1edb0a3eaa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(X_train).to_csv(root + 'data/train/x_train_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_train).to_csv(root + 'data/train/y_train_stand_01.csv', index=False)\n",
+    "pd.DataFrame(X_train).to_csv('data/train/x_train_stand_01.csv', index=False)\n",
+    "pd.DataFrame(y_train).to_csv('data/train/y_train_stand_01.csv', index=False)\n",
     "\n",
-    "pd.DataFrame(X_test).to_csv(root + 'data/test/x_test_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_test).to_csv(root + 'data/test/y_test_stand_01.csv', index=False)"
+    "pd.DataFrame(X_test).to_csv('data/test/x_test_stand_01.csv', index=False)\n",
+    "pd.DataFrame(y_test).to_csv('data/test/y_test_stand_01.csv', index=False)"
    ]
   },
   {
@@ -679,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "bb266c2a-0fa5-4185-8975-dbd64bd07e9e",
    "metadata": {},
    "outputs": [
@@ -699,7 +697,7 @@
        "        0.06603409987703489]], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "eac74046-9cb1-4676-8db8-ea29bd21160c",
    "metadata": {},
    "outputs": [
@@ -736,7 +734,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "989cd3cb-267a-4c3f-a3bf-0904b80b8e95",
    "metadata": {},
    "outputs": [],
@@ -759,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "f220f06e-862b-42a2-8cbb-598168c9f5bd",
    "metadata": {},
    "outputs": [
@@ -795,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "e1b518cb-5f59-48f6-8513-2da86a251878",
    "metadata": {},
    "outputs": [
@@ -839,11 +837,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fe47e790-0ccf-4239-bdc1-6ecaa0b0b26e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.DataFrame(X_train).to_csv('data/train/x_train_stand_01.csv', index=False)\n",
+    "pd.DataFrame(y_train).to_csv('data/train/y_train_stand_01.csv', index=False)\n",
+    "\n",
+    "pd.DataFrame(X_test).to_csv('data/test/x_test_stand_01.csv', index=False)\n",
+    "pd.DataFrame(y_test).to_csv('data/test/y_test_stand_01.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
