--- a/v1/Scratch.ipynb
+++ b/v1/Scratch.ipynb
@@ -312,7 +312,29 @@
    "id": "d39a080a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "month_lu = {\n",
+    "    'jan': 1,\n",
+    "    'feb': 2,\n",
+    "    'mar': 3,\n",
+    "    'apr':4,\n",
+    "    'may':5,\n",
+    "    'jun':6,\n",
+    "    'jul':7,\n",
+    "    'aug':8,\n",
+    "    'sep':9,\n",
+    "    'oct':10,\n",
+    "    'nov':11,\n",
+    "    'dec':12\n",
+    "}\n",
+    "\n",
+    "df = pd.read_csv('data/customers.csv', sep=';')\n",
+    "df['row_id'] = df.reset_index().index\n",
+    "df['month_num'] = df.month.map(month_lu)\n",
+    "df.month_num = pd.to_numeric(df.month_num, downcast='integer')\n",
+    "df.day = pd.to_numeric(df.day, downcast='integer')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -320,7 +342,15 @@
    "id": "d98dc8ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_pivot = df[['month_num', 'day', 'balance']].sort_values(by=['month_num', 'day'], ascending=True)\n",
+    "df_pivot = df_pivot.pivot_table(index='month_num', columns='day', values='balance').round()\n",
+    "\n",
+    "plt.figure(figsize=(20, 6))\n",
+    "plt.title('Correlation between Month and Day')\n",
+    "sns.set_context('paper', font_scale=1.4)\n",
+    "sns.heatmap(df_pivot, cmap='Blues');"
+   ]
   },
   {
    "cell_type": "code",
