--- a/v1/Data-Preprocessing.ipynb
+++ b/v1/Data-Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "41e9678b-3129-44c2-bcb7-91075edc6914",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "0ab65a78-4d4a-4d4d-ae3b-39575f872956",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "4   33       unknown   single    unknown      no        1      no   no  no"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,12 +141,12 @@
    "id": "9e6d15d6-3dc1-44ae-838a-93e08c82849d",
    "metadata": {},
    "source": [
-    "Lets not try and run before we can walk. We will take only data related to the client and their banking habits and see how our model performs with these features, we can add other features as we progress."
+    "Lets start small. We will take only data related to the client and their banking habits and see how our model performs with these features, we can add other features as we progress."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "748983f2-8ebe-45b2-b347-7e11baa4895d",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "4905b2bc-336e-4b1e-b994-2e54632713e3",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "array(['no', 'no', 'no', ..., 'yes', 'no', 'no'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "d94fce6a-96a7-4f40-afd7-9bcc9c71ffcb",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "       [0.0, 0.0, 1.0, ..., 0.0, 37, 2971]], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,13 +261,13 @@
     ")\n",
     "\n",
     "X = np.array(ct.fit_transform(X))\n",
-    "pd.DataFrame(X).to_csv('data/X_encoded_01.csv')\n",
+    "pd.DataFrame(X).to_csv('data/X_encoded.csv')\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "1971aa7e-be80-4fa8-bbe6-b8b15a91854f",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "array([0, 0, 0, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "52aa8bde-e7a9-4cfe-9faa-22e4b5b2728f",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "8deae66b-2cab-49e4-a9ba-cb05c5ab3f81",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "max       95.0  102127.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "34664067-a86b-4382-851f-7276d3eeb6c8",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "d3c0a871-c225-4d3c-af3c-3c6f0ab2ea9e",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "e1e222fe-f612-4a97-9cab-e547e3047132",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "        -0.3294291851229337]], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "id": "3dec5cee-321e-4aa1-9baa-d90347f17a31",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "        0.002154009050447482]], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "id": "19d05b3e-e089-410d-a255-875fbba8515d",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "id": "7f91d1ca-6dcc-474f-a26c-3917ad13f73b",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "id": "bee9b1d5-918c-4316-bcdc-2254f9c9c0f1",
    "metadata": {},
    "outputs": [
@@ -655,16 +655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "36aef634-be45-4c03-9c42-e1edb0a3eaa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(X_train).to_csv('data/train/x_train_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_train).to_csv('data/train/y_train_stand_01.csv', index=False)\n",
+    "pd.DataFrame(X_train).to_csv('data/train/x_train_stand.csv', index=False)\n",
+    "pd.DataFrame(y_train).to_csv('data/train/y_train_stand.csv', index=False)\n",
     "\n",
-    "pd.DataFrame(X_test).to_csv('data/test/x_test_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_test).to_csv('data/test/y_test_stand_01.csv', index=False)"
+    "pd.DataFrame(X_test).to_csv('data/test/x_test_stand.csv', index=False)\n",
+    "pd.DataFrame(y_test).to_csv('data/test/y_test_stand.csv', index=False)"
    ]
   },
   {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "id": "bb266c2a-0fa5-4185-8975-dbd64bd07e9e",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "        0.06603409987703489]], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "id": "eac74046-9cb1-4676-8db8-ea29bd21160c",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "id": "989cd3cb-267a-4c3f-a3bf-0904b80b8e95",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "id": "f220f06e-862b-42a2-8cbb-598168c9f5bd",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "e1b518cb-5f59-48f6-8513-2da86a251878",
    "metadata": {},
    "outputs": [
@@ -837,16 +837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "id": "fe47e790-0ccf-4239-bdc1-6ecaa0b0b26e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(X_train).to_csv('data/train/x_train_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_train).to_csv('data/train/y_train_stand_01.csv', index=False)\n",
+    "pd.DataFrame(X_train).to_csv('data/train/x_train_norm.csv', index=False)\n",
+    "pd.DataFrame(y_train).to_csv('data/train/y_train_norm.csv', index=False)\n",
     "\n",
-    "pd.DataFrame(X_test).to_csv('data/test/x_test_stand_01.csv', index=False)\n",
-    "pd.DataFrame(y_test).to_csv('data/test/y_test_stand_01.csv', index=False)"
+    "pd.DataFrame(X_test).to_csv('data/test/x_test_norm.csv', index=False)\n",
+    "pd.DataFrame(y_test).to_csv('data/test/y_test_norm.csv', index=False)"
    ]
   }
  ],
