--- a/v1/Numerical-Analysis.ipynb
+++ b/v1/Numerical-Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "15395920-4c79-4894-90fa-0324c95967a5",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import fun\n",
     "\n",
     "%matplotlib inline\n",
     "sns.set_style('darkgrid')\n",
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "4be3e425-916e-4772-bdfc-582ff9af6a9e",
    "metadata": {},
    "outputs": [
@@ -143,7 +142,7 @@
        "4      0.001  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "c0d0fc20-d58c-4953-80af-c62f02b44d10",
    "metadata": {},
    "outputs": [
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "9f243c50-af7a-4314-8fc5-a015aab45dd2",
    "metadata": {},
    "outputs": [
@@ -218,7 +217,6 @@
        "      <th></th>\n",
        "      <th>age</th>\n",
        "      <th>balance</th>\n",
-       "      <th>balance_k</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -226,73 +224,65 @@
        "      <th>count</th>\n",
        "      <td>45211.00</td>\n",
        "      <td>45211.00</td>\n",
-       "      <td>45211.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>40.94</td>\n",
        "      <td>1362.27</td>\n",
-       "      <td>1.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>10.62</td>\n",
        "      <td>3044.77</td>\n",
-       "      <td>3.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>18.00</td>\n",
        "      <td>-8019.00</td>\n",
-       "      <td>-8.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>33.00</td>\n",
        "      <td>72.00</td>\n",
-       "      <td>0.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>39.00</td>\n",
        "      <td>448.00</td>\n",
-       "      <td>0.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>48.00</td>\n",
        "      <td>1428.00</td>\n",
-       "      <td>1.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>95.00</td>\n",
        "      <td>102127.00</td>\n",
-       "      <td>102.13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            age    balance  balance_k\n",
-       "count  45211.00   45211.00   45211.00\n",
-       "mean      40.94    1362.27       1.36\n",
-       "std       10.62    3044.77       3.04\n",
-       "min       18.00   -8019.00      -8.02\n",
-       "25%       33.00      72.00       0.07\n",
-       "50%       39.00     448.00       0.45\n",
-       "75%       48.00    1428.00       1.43\n",
-       "max       95.00  102127.00     102.13"
+       "            age    balance\n",
+       "count  45211.00   45211.00\n",
+       "mean      40.94    1362.27\n",
+       "std       10.62    3044.77\n",
+       "min       18.00   -8019.00\n",
+       "25%       33.00      72.00\n",
+       "50%       39.00     448.00\n",
+       "75%       48.00    1428.00\n",
+       "max       95.00  102127.00"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe().round(2)"
+    "df[['age', 'balance']].describe().round(2)"
    ]
   },
   {
@@ -305,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "0d16efd1-75f6-497b-bfba-b52d27a9eaae",
    "metadata": {},
    "outputs": [
@@ -348,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "399bdc37-b66d-4b7b-9a7b-85a5e232b13d",
    "metadata": {},
    "outputs": [
@@ -379,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "68322da7-422b-4e67-9577-9c5842ecccb0",
    "metadata": {},
    "outputs": [
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "id": "ffb15cb5-ae3e-4a69-8c6c-3d2eb2835531",
    "metadata": {},
    "outputs": [
@@ -429,7 +419,7 @@
    "source": [
     "plt.figure(figsize=(18, 6))\n",
     "plt.title('Correlation between Numerical Age and Balance')\n",
-    "sns.heatmap(df[['age', 'balance']].corr(), annot=True, cmap='Blues');"
+    "sns.heatmap(df[['age', 'balance']].corr(method='pearson'), annot=True, cmap='Blues');"
    ]
   },
   {
